 4.47 => 4.48
2023-05-22

Balance :
 - All T1 Plasma Tower : Increase damage by 36% : 80dmg/s => 125dmg/s (Not enough used)
 - All T2 Plasma Tower : Increase damage by 20% : 160dmg/s => 200dmg/s
 - Orchid was already to 200dmg/s. So, decreasez energy & metal cost
 - Rumad Triton T1 at 175dmg/s but range at 1000
 - Mobile Tachyon Arm & Talon : Decrease HP by 20%

Improvment :
- Razorback : BeamLaser comes back.
- T2 Core Sniper : Decrease Model size
- T2 Core Sumo : Increase Model size


 4.46 => 4.47
2023-04-23

Balance :
 - AntiNuke T2/T3 becomes AntiMissiles. They can now intercept Tac Missiles. (If you have good range, you can try to saturate AntiNuke)
 - Bombers damage vs commander are increase by 100% (total 50% for defaut damage vs 25% before)
 - Uniformize damage modifier for fix armored units : 0.10=>0.20
 - Obelisk Shield Talon : Reduce metalcost 4.6K => 3.6K
 - All Mobile Jam : Increase energycost ~2KE=>6KE. Decrease energy/s for jamming 100=>50

 4.45 => 4.46
2023-03-24

Balance :
 - Decrease range for TLL Leopard Mortal T2 Vehicle
 - Decrease Damage for Tremor 1000=>750/s
 - Increase damage for all T1 torpedo
 - Increase damage for Gok light tank T1 by 10%
 - Increase range for Olympus T4 Arm 1800=>2000
 - TSAR Gok : Remplace beam Weapon by classic plasma ammunition (same than Arm/TLL/Core)

Improvment :
- Add T4 Missile Turret Talon
- Add DepthLuancher for Gok & Talon

Fix :
 - T4 Spider Constructor ARM Movement class

 4.44 => 4.45
2023-03-02

 Improvment :
 - Delete Priority Air Class Armor. Fighter lost the 100% more damage vs bombers and transporters.
 - Add Gok Spy
 - Rework T2 & T3 Kbot Talon model

  Next work :
  - Gok Commando
  - Gok TSAR Rework

4.43 => 4.44
2023-02-24

Balance LongRangePplasmaTower :
 - Decrease all damage between 25% and 33%
 - All vulc/buzz have same range than bertha/intimidator for same tech level (T3 bertha gain 500 more range, T4 Buzz lost 2K range)