@@ -29,8 +29,8 @@ return {
 		immunetoparalyzer = 1,
 		losemitheight = 85,
 		maneuverleashlength = 640,
-		mass = 45000,
-		maxdamage = 245000,
+		mass = 36640,
+		maxdamage = 205000,
 		maxslope = 17,
 		maxvelocity = 0.80,
 		maxwaterdepth = 12,
@@ -131,7 +131,7 @@ return {
 				explosiongenerator = "custom:popupcannon",
 				name = "Electro-Magnetic Cannon",
 				noselfdamage = true,
-				range = 600,
+				range = 950,
 				reloadtime = 0.15,
 				rgbcolor = "0.83 0.57 0",
 				soundhitwet = "splshbig",
@@ -143,7 +143,7 @@ return {
 				weapontype = "Cannon",
 				weaponvelocity = 475,
 				damage = {
-					default = 40,
+					default = 32,
 					subs = 5,
 				},
 			},
