@@ -29,7 +29,7 @@ return {
 		losemitheight = 94,
 		maneuverleashlength = 640,
 		mass = 27202,
-		maxdamage = 137955,
+		maxdamage = 128955,
 		maxslope = 17,
 		maxvelocity = 1.2,
 		maxwaterdepth = 12,
@@ -136,7 +136,7 @@ return {
 				intensity = 4,
 				name = "OrcoRapidBlaster",
 				noselfdamage = true,
-				range = 575,
+				range = 650,
 				reloadtime = 0.4,
 				rgbcolor = "0.5 0.5 1.0",
 				size = 1.5,
