@@ -30,7 +30,7 @@ return {
 		losemitheight = 147,
 		maneuverleashlength = 640,
 		mass = 28245,
-		maxdamage = 152500,
+		maxdamage = 142500,
 		maxslope = 17,
 		maxvelocity = 1.2,
 		maxwaterdepth = 48,
@@ -177,7 +177,7 @@ return {
 				intensity = 4,
 				name = "GaussCannon",
 				noselfdamage = true,
-				range = 590,
+				range = 700,
 				reloadtime = 1,
 				rgbcolor = "1 0.75 0.25",
 				size = 4,
